app-img-broken in my devide-fixed

--- a/css/style.css
+++ b/css/style.css
@@ -288,7 +288,7 @@ nav a#pull {
 	text-align: right;
 }
 .appp img {
-	width: 71%;
+	width: 60%;
 }
 /*--about--*/
 .about{
